Fix jumping viewport and update news text

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -61,6 +61,7 @@ html {
   height: 100%;
   font-size: 14px;
   line-height: 24px;
+  overflow-y: scroll !important;
 }
 
 body {
@@ -708,6 +709,12 @@ button[data-balloon] {
   background-image: url('../assets/alert_icon_info.svg');
 }
 
+.alert.news {
+  border-color: var(--color-brand-dark);
+  padding: 24px;
+}
+
+
 .alert-content {
   text-align: left;
   max-height: 180px;
@@ -883,6 +890,7 @@ button[data-balloon] {
   width: 100%;
   height: 100%;
   background-color: rgba(32, 50, 63, 0.64);
+  padding-right: 0 !important;
 }
 
 .modal-overlay {
